Fix layout issues in inquiry form.

--- a/public/app/resources/less/modules/vis.less
+++ b/public/app/resources/less/modules/vis.less
@@ -60,6 +60,9 @@
 			input[type="date"] {
 				width: 70%;
 			}
+			input[type="checkbox"] {
+				margin-right: 5px;
+			}
 		}
 
 		fieldset.sentimentFilter {
